tests/baselines/reference/decoratorOnClassMethod11.errors.txt
tests/cases/conformance/decorators/class/method/decoratorOnClassMethod11.ts(5,10): error TS2331: 'this' cannot be referenced in a module or namespace body.
tests/cases/conformance/decorators/class/method/decoratorOnClassMethod11.ts(12,10): error TS2331: 'this' cannot be referenced in a module or namespace body.


==== tests/cases/conformance/decorators/class/method/decoratorOnClassMethod11.ts (2 errors) ====
    module M {
        class C {
            decorator(target: Object, key: string): void { }
    
            @this.decorator
             ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
            method() { }
        }
    
        const C1 = class {
            decorator(target: Object, key: string): void { }
    
            @this.decorator
             ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
            method() { }
        }
    }
    